--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.1",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "stripe": "^17.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
