--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.ts",
     "seed": "ts-node scripts/seed.ts",
-    "populate": "ts-node scripts/populateSlots.ts"
+    "populate": "ts-node scripts/populateSlots.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "prisma": {
     "seed": "ts-node scripts/seed.ts"
@@ -19,6 +20,7 @@
     "@prisma/client": "^5.22.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/passport-apple": "^2.0.3",
+    "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -38,7 +40,8 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.1",
     "prisma": "^5.22.0",
-    "stripe": "^17.4.0-beta.2"
+    "stripe": "^17.4.0-beta.2",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -46,12 +49,15 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.8.7",
     "@types/passport": "^1.0.17",
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.16",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
