--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   "author": "James Gower",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/passport-apple": "^2.0.3",
-    "@types/supertest": "^6.0.2",
+    "@prisma/client": "^6.18.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -33,17 +31,20 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.10",
+    "nodemailer-express-handlebars": "^7.0.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.1",
-    "prisma": "^5.22.0",
-    "stripe": "^17.4.0-beta.2",
+    "stripe": "^17.6.0",
     "supertest": "^7.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
@@ -52,12 +53,21 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.8.7",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.3",
+    "@types/nodemailer-express-handlebars": "^4.0.6",
     "@types/passport": "^1.0.17",
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/supertest": "^6.0.2",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "prisma": "^6.18.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.24.1"
   }
 }
