--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
+    "start": "node dist/server.js",
+    "build": "tsc",
     "dev": "nodemon server.ts",
     "seed": "ts-node scripts/seed.ts",
     "populate": "ts-node scripts/populateSlots.ts",
@@ -18,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@types/passport-twitter": "^1.0.40",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -37,6 +40,7 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^8.13.1",
     "stripe": "^17.6.0",
     "supertest": "^7.0.0"
