--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "types": ["jest", "node"],
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src/**/*.ts", "scripts/populateDB.ts"],
+  "include": ["src/**/*.ts", "scripts/populateDB.ts", "server.ts", "app.ts"],
   "exclude": ["node_modules"]
 }
