--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 node_modules
 /dist
-# Keep environment variables out of version control
+
 .env
+.env.test
+.env.production
+*.pem
+keys/
+
+test-results/
+coverage
