--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "server.ts",
   "scripts": {
     "start": "node dist/server.js",
-    "build": "npm test && tsc",
-    "dev": "nodemon server.ts",
+    "build": "npm test && tsc && tsc-alias",
+    "dev": "nodemon -r tsconfig-paths/register server.ts",
     "seed": "ts-node scripts/seed.ts",
-    "populate": "ts-node scripts/populateSlots.ts",
-    "test": "jest --silent",
-    "test:watch": "jest --watch --silent",
+    "populate": "ts-node scripts/populate-slots.ts",
+    "seed:test-users": "dotenv -e .env.test -- ts-node scripts/seed-test-users.ts",
+    "test:db:up": "docker-compose up -d postgres-test",
+    "test:migrate": "dotenv -e .env.test -- prisma migrate deploy",
+    "test:seed": "dotenv -e .env.test -- ts-node scripts/seed.ts",
+    "pretest": "npm run test:db:up && npm run test:migrate",
+    "test": "dotenv -e .env.test -- jest --silent",
+    "test:watch": "dotenv -e .env.test -- jest --watch --silent",
     "postinstall": "prisma generate"
   },
   "prisma": {
@@ -20,10 +25,10 @@
   "author": "James Gower",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.18.0",
+    "@prisma/adapter-pg": "^7.2.0",
     "@types/passport-twitter": "^1.0.40",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -44,10 +49,12 @@
     "passport-twitter": "^1.0.4",
     "pg": "^8.13.1",
     "stripe": "^17.6.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@prisma/client": "^7.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
@@ -64,15 +71,24 @@
     "@types/passport": "^1.0.17",
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "prisma": "^6.18.0",
+    "prisma": "^7.2.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.24.1"
+  },
+  "overrides": {
+    "diff": "^8.0.3",
+    "hono": "^4.11.4",
+    "xmldom": "npm:@xmldom/xmldom@^0.8.11"
   }
 }
