fix: resolve path alias issues in production build
- Update tsconfig.json baseUrl to . to support root-level entry files
- Prefix all path aliases with src/ to ensure tsc-alias resolves them correctly
- Fixes MODULE_NOT_FOUND error on Render deployment
- Removed logs from git

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,22 +7,22 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@controllers": ["controllers/index", "controllers"],
-      "@controllers/*": ["controllers/*"],
-      "@middleware": ["middleware/index", "middleware"],
-      "@middleware/*": ["middleware/*"],
-      "@utils": ["utils/index", "utils"],
-      "@utils/*": ["utils/*"],
-      "@config": ["config/index", "config"],
-      "@config/*": ["config/*"],
-      "@routes": ["routes/index", "routes"],
-      "@routes/*": ["routes/*"],
-      "@interfaces": ["interfaces/index", "interfaces"],
-      "@interfaces/*": ["interfaces/*"],
-      "@services": ["services/index", "services"],
-      "@services/*": ["services/*"]
+      "@controllers": ["src/controllers/index", "src/controllers"],
+      "@controllers/*": ["src/controllers/*"],
+      "@middleware": ["src/middleware/index", "src/middleware"],
+      "@middleware/*": ["src/middleware/*"],
+      "@utils": ["src/utils/index", "src/utils"],
+      "@utils/*": ["src/utils/*"],
+      "@config": ["src/config/index", "src/config"],
+      "@config/*": ["src/config/*"],
+      "@routes": ["src/routes/index", "src/routes"],
+      "@routes/*": ["src/routes/*"],
+      "@interfaces": ["src/interfaces/index", "src/interfaces"],
+      "@interfaces/*": ["src/interfaces/*"],
+      "@services": ["src/services/index", "src/services"],
+      "@services/*": ["src/services/*"]
     },
     "types": ["jest", "node"],
     "typeRoots": ["./node_modules/@types", "./src/types"]
