--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/passport-twitter": "^1.0.40",
     "axios": "^1.7.7",
     "bcrypt": "^6.0.0",
+    "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -57,6 +58,7 @@
     "@eslint/js": "^9.21.0",
     "@prisma/client": "^7.2.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/connect-pg-simple": "^7.0.3",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
