--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/extension-accelerate": "^3.0.1",
     "@types/passport-twitter": "^1.0.40",
     "axios": "^1.7.7",
     "bcrypt": "^6.0.0",
